Fixed table margin alignment

--- a/src/Components/DetailList/Detaillist.css
+++ b/src/Components/DetailList/Detaillist.css
@@ -14,3 +14,12 @@ thead {
 tbody{
     height: 785px;
 }
+.tdId{
+    width: 100px;
+}
+.idTitle{
+    width: 50%;
+}
+.tdTitle{
+    width: 50%;
+}
